<resources>
    <string name="app_name">Calculator</string>
    <string name="version">Calculator_V_0.0.7</string>

    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>

    <string name="operator_plus">+</string>
    <string name="operator_subtraction">−</string>
    <string name="operator_division">÷</string>
    <string name="operator_multiplication">×</string>
    <string name="percentage_operation">%</string>
    <string name="sign_changer_operation">+/−</string>
    <string name="operator_dot">.</string>

    <string name="ac_operation">AC</string>
    <string name="c_operation">C</string>
    <string name="result_operation">=</string>
    <string name="github_link"><a Uri="https://github.com/joymridha2004">github.com/joymridha2004</a></string>
    <string name="c">C</string>


</resources>